less/application.brand.less
bin-brand {
  display: inline-block;
  line-height: 1em;
  position: relative;

  * {
    display: inline-block;
  }

  a {
    & > div {
      &:before {
        content: '';
        display: inline-block;
        width: 0;
        height: 100%;
        vertical-align: middle;
      }
    }

    &:hover, &:focus {
      text-decoration: none;
    }

    img, h1 {
      max-width: 100%;
      height: auto;
      vertical-align: middle;
    }

    h1 {
      margin: 0;
      font-size: inherit;
      line-height: inherit;
    }
  }
}

